# DestinE_Deltares_DE372a_FloodRiskDemo

./: .gitignore  README.md  app.py  app_main.py  desp-authentication.py  discharge_tab.py  draw_utils.py  dt-climate-data.ipynb  environment.yml  event_tab.py  measure_tab.py  plot_utils.py  projection_tab.py  pyproject.toml  rainfall_tab.py  run_tab.py  scenario_tab.py  skecth_fa_utils.ipynb  solara.py  solara_widget.ipynb  strategy_tab.py  test_app.py  vis_tab.py  waterlevel_tab.py  wind_tab.py
demonstrator/: __init__.py  front.py
demonstrator/tabs/: __init__.py  event_tab.py  run_tab.py  vis_tab.py
demonstrator/tabs/forcing/: __init__.py  discharge_tab.py  wind_tab.py
demonstrator/utils/: __init__.py  draw_utils.py
